# financial-insights-skill

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude-plugin/: plugin.json
.claude/skills/financial-insights/: SKILL.md
.cursor/rules/: financial-insights.md
.github/workflows/: ci.yml  pr.yml
config/: card_rewards.example.yaml  category_mappings.json
docs/: PRD.md
fin_insights/: __init__.py  analytics.py  categories.py  cli.py  config.py  db.py  ingest.py  models.py  pdf_parser.py  profile.py  rewards.py  session.py
fin_insights/skill_data/: SKILL.md
profiles/: amex_credit.json  bofa_checking.json  bofa_credit.json  bofa_credit_yearend.json  chase_checking.json  chase_checking_pdf.json  chase_credit.json  chase_credit_pdf.json  discover_credit.json  discover_credit_pdf.json  wells_fargo_credit.json  wells_fargo_credit_pdf.json
skills/financial-insights/: SKILL.md
tests/: test_analytics.py  test_categories.py  test_ingest.py  test_profile.py  test_rewards.py
tests/fixtures/: sample_amex_credit.csv  sample_chase_credit.csv  sample_discover_credit.csv  sample_wells_fargo_credit.csv
