[project]
name = "financial-insights-skill"
version = "0.1.0"
description = "AI-powered personal financial statement analyzer with adaptive parser profiles"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "duckdb>=1.0",
    "pdfplumber>=0.10",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
fin-insights = "fin_insights.cli:cli"

[project.urls]
Homepage = "https://github.com/srini-velaga/financial-insights-skill"
Repository = "https://github.com/srini-velaga/financial-insights-skill"

[tool.hatch.build.targets.wheel]
packages = ["fin_insights"]
artifacts = ["fin_insights/skill_data/*"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
